fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
